fix(web-components): added ability to hide the close button, equalised call to action button spacing

--- a/packages/web-components/src/components/ic-dialog/ic-dialog.css
+++ b/packages/web-components/src/components/ic-dialog/ic-dialog.css
@@ -30,7 +30,8 @@
   background-color: var(--ic-architectural-white);
   border: var(--ic-border-default);
   border-radius: var(--ic-border-radius);
-  padding: var(--ic-space-xs) var(--ic-space-md);
+  padding: var(--ic-space-xs) var(--ic-space-md) var(--ic-space-md)
+    var(--ic-space-md);
   transform: translateY(-3rem);
   transition: transform 1000s;
   display: flex;
